k8s-manifests/03_bwsm-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bwsm-eso
  namespace: bwsm
  labels:
    app.kubernetes.io/instance: bwsm-eso
    app.kubernetes.io/name: bwsm-eso
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bwsm-eso
      app.kubernetes.io/instance: bwsm-eso
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bwsm-eso
        app.kubernetes.io/instance: bwsm-eso
    spec:
      containers:
        - name: bwsm-eso
          image: bojanraic/bwsm-eso:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            exec:
              command:
                - wget
                - -q
                - http://127.0.0.1:8080/
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 5
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: bwsm-eso
  namespace: bwsm
  labels:
    app.kubernetes.io/instance: bwsm-eso
    app.kubernetes.io/name: bwsm-eso
  annotations: {}
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bwsm-eso
    app.kubernetes.io/instance: bwsm-eso
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eso-ns-2-bw-pods-policy
  namespace: bwsm
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: bwsm-eso
      app.kubernetes.io/name: bwsm-eso
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: external-secrets
